Port to GNU Radio 3.10

--- a/grc/CMakeLists.txt
+++ b/grc/CMakeLists.txt
@@ -5,13 +5,13 @@
 #
 # SPDX-License-Identifier: GPL-3.0-or-later
 #
+
 install(FILES
-    dpd_MP_model_PA.block.yml
+    dpd_gain_phase_calibrate.block.yml
     dpd_GMP_model_PA.block.yml
+    dpd_MP_model_PA.block.yml
     dpd_predistorter_training.block.yml
     dpd_RLS_postdistorter.block.yml
     dpd_stream_to_gmp_vector.block.yml
-    dpd_gain_phase_calibrate.block.yml
     dpd_stream_to_message.block.yml
-    dpd_LMS_postdistorter.block.yml DESTINATION share/gnuradio/grc/blocks
-)
+    dpd_LMS_postdistorter.block.yml DESTINATION share/gnuradio/grc/blocks)
