--- a/grc/dpd_LMS_postdistorter.block.yml
+++ b/grc/dpd_LMS_postdistorter.block.yml
@@ -2,7 +2,7 @@ id: dpd_LMS_postdistorter
 label: LMS postdistorter
 category: '[DPD]'
 templates:
-  imports: import dpd
+  imports: from gnuradio import dpd
   make: dpd.LMS_postdistorter(${dpd_params}, ${iter_limit}, ${method}, ${learning_rate})
 parameters:
 - id: dpd_params
