--- a/grc/dpd_MP_model_PA.block.yml
+++ b/grc/dpd_MP_model_PA.block.yml
@@ -2,7 +2,7 @@ id: dpd_MP_model_PA
 label: MP model PA
 category: '[DPD]'
 templates:
-  imports: import dpd
+  imports: from gnuradio import dpd
   make: dpd.MP_model_PA(${Order}, ${Mem_Depth}, ${Mode}, ${Coeff})
 parameters:
 - id: Order
