--- a/grc/dpd_RLS_postdistorter.block.yml
+++ b/grc/dpd_RLS_postdistorter.block.yml
@@ -2,7 +2,7 @@ id: dpd_RLS_postdistorter
 label: RLS postdistorter
 category: '[DPD]'
 templates:
-  imports: import dpd
+  imports: from gnuradio import dpd
   make: dpd.RLS_postdistorter(${dpd_params}, ${iter_limit})
 parameters:
 - id: dpd_params
