--- a/grc/dpd_gain_phase_calibrate.block.yml
+++ b/grc/dpd_gain_phase_calibrate.block.yml
@@ -2,7 +2,7 @@ id: dpd_gain_phase_calibrate
 label: Gain Phase Calibrate
 category: '[DPD]'
 templates:
-  imports: import dpd
+  imports: from gnuradio import dpd
   make: dpd.gain_phase_calibrate()
 inputs:
 - label: PA Output
