--- a/grc/dpd_stream_to_gmp_vector.block.yml
+++ b/grc/dpd_stream_to_gmp_vector.block.yml
@@ -2,7 +2,7 @@ id: dpd_stream_to_gmp_vector
 label: Stream to GMP vector
 category: '[DPD]'
 templates:
-  imports: import dpd
+  imports: from gnuradio import dpd
   make: dpd.stream_to_gmp_vector(${dpd_params})
 parameters:
 - id: dpd_params
