--- a/grc/dpd_stream_to_message.block.yml
+++ b/grc/dpd_stream_to_message.block.yml
@@ -2,7 +2,7 @@ id: dpd_stream_to_message
 label: Stream to Message
 category: '[DPD]'
 templates:
-  imports: import dpd
+  imports: from gnuradio import dpd
   make: dpd.stream_to_message()
 inputs:
 - label: in
